--- a/docs/css/estilo.css
+++ b/docs/css/estilo.css
@@ -37,17 +37,20 @@ header {
 }
 
 
-body {
+main {
     background-color: #ffff;
     font-family: Arial, Helvetica, sans-serif;
     width: 98.9vw;
+    max-width: 4000px;
+    margin: auto;
+    height: 100%;
 }
 
 .menu {
     background-color: #d6d6d6;
     box-shadow: 1px 0px 5px;
     padding: 2rem;
-    padding-bottom: 100%;
+    padding-bottom: 100vw;
     margin-right: 2rem;
 }
 
@@ -60,4 +63,15 @@ body {
 .conteudo {
     padding: 10px;
     width: 75vw;
+}
+
+footer > p {
+    color: white;
+    padding: 10px;
+}
+ 
+footer {
+    text-align: center;
+    background-color: #163853;
+    
 }
