--- a/Desenvolvimento Web Básico/aula_11092025_formularios/esilo/style.css
+++ b/Desenvolvimento Web Básico/aula_11092025_formularios/esilo/style.css
@@ -22,5 +22,8 @@ input {
 }
 
 #date:hover {
-    color: blue;
+    color: white;
+    background-color: rgb(28, 71, 53);
+    transition: 1s; 
+    
 }
