--- a/docs/css/estilo.css
+++ b/docs/css/estilo.css
@@ -20,8 +20,9 @@ main {
     font-family: Arial, Helvetica, sans-serif;
     width: 98.9vw;
     max-width: 4000px;
+    /* max-height: 1vw */
     margin: auto;
-    height: 100%;
+    /* height: ; */
 }
 
 .menu {
@@ -35,8 +36,7 @@ main {
 .container {
     display: flex;
     flex-direction: row;
-    
-}
+} 
 
 .cabecalho {
     color: #ffff;
