--- a/Desenvolvimento Web Básico/aula_07082025_listas/style.css
+++ b/Desenvolvimento Web Básico/aula_07082025_listas/style.css
@@ -7,11 +7,13 @@ header {
 }
 
 main {
+    padding: 5px;
+    margin:auto ;
     width: 75vh;
     background-color: white;
     border-radius: 10px 10px 10px;
     box-shadow: 3px 1px 5px;
-    display: flex;
+    
     flex-direction: row;
     justify-content: center;
     align-items: center;
